Header image fix ?

--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,9 @@ cite {
         width: 100%; 
         padding: 15px; 
     }
+    .header img{
+        display:none;
+    }
 }
 
 /* Gallery Section */
